fix: move all-deleted rules to Default Project (disabled) instead of trapping workspace
Address PR review comments and implement Product decision: when all projects
for a rule are deleted, reassign the rule to the Default Project and disable it.
This avoids trapping the workspace, preserves the rule data, and prevents
unintended execution since the rule was for deleted projects anyway.

Also addresses remaining review feedback: dedicated scheduler, verbose logging,
DAO cleanup, empty-set handling, RowMapper removal, config-test params, test
splitting, and new test scenarios.