@@ -4,10 +4,8 @@ import com.comet.opik.api.Project;
 import com.comet.opik.domain.DemoData;
 import com.comet.opik.domain.IdGenerator;
 import com.comet.opik.domain.ProjectService;
-import com.comet.opik.domain.workspaces.WorkspacesService;
 import com.comet.opik.infrastructure.AutomationRuleProjectMigrationConfig;
 import com.comet.opik.infrastructure.MigrationConfig;
-import com.comet.opik.infrastructure.cache.CacheManager;
 import io.opentelemetry.api.GlobalOpenTelemetry;
 import io.opentelemetry.api.common.AttributeKey;
 import io.opentelemetry.api.common.Attributes;
@@ -16,19 +14,19 @@ import io.opentelemetry.api.metrics.LongGauge;
 import io.opentelemetry.api.metrics.LongHistogram;
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
+import lombok.Builder;
 import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import ru.vyarus.dropwizard.guice.module.yaml.bind.Config;
 import ru.vyarus.guicey.jdbi3.tx.TransactionTemplate;
 
-import java.util.ArrayList;
+import java.util.List;
 import java.util.Set;
-import java.util.TreeSet;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
+import static com.comet.opik.infrastructure.auth.RequestContext.SYSTEM_USER;
 import static com.comet.opik.infrastructure.db.TransactionTemplateAsync.READ_ONLY;
 import static com.comet.opik.infrastructure.db.TransactionTemplateAsync.WRITE;
 import static io.opentelemetry.api.common.AttributeKey.stringKey;
@@ -44,48 +42,38 @@ public class AutomationRuleProjectMigrationService {
     public static final Attributes RESULT_ERROR = Attributes.of(RESULT_KEY, "error");
 
     private static final Attributes RESULT_MIGRATED = Attributes.of(RESULT_KEY, "migrated");
-    private static final Attributes RESULT_NO_MULTI_PROJECT_RULES = Attributes.of(RESULT_KEY,
-            "no_multi_project_rules");
-    private static final Attributes RESULT_ALL_SKIPPED = Attributes.of(RESULT_KEY, "all_projects_deleted");
 
-    private static final Attributes SKIP_REASON_ALL_DELETED = Attributes.of(stringKey("reason"),
-            "all_projects_deleted");
     private static final Attributes SKIP_REASON_PARTIAL_DELETED = Attributes.of(stringKey("reason"),
             "partial_projects_deleted");
-
-    private static final String TRAPPED_REASON_ALL_PROJECTS_DELETED = "all_projects_deleted";
-
-    private static final String CACHE_KEY_PATTERN = "*-%s-*";
+    private static final Attributes MOVED_TO_DEFAULT_ATTR = Attributes.of(stringKey("reason"),
+            "moved_to_default_project");
 
     private final @NonNull TransactionTemplate transactionTemplate;
     private final @NonNull ProjectService projectService;
-    private final @NonNull WorkspacesService workspacesService;
-    private final @NonNull CacheManager cacheManager;
+    private final @NonNull AutomationRuleEvaluatorService evaluatorService;
     private final @NonNull IdGenerator idGenerator;
     private final @NonNull AutomationRuleProjectMigrationConfig config;
     private final @NonNull MigrationConfig migrationConfig;
 
     private final LongHistogram cycleEligibleWorkspaces;
-    private final LongGauge cycleTrappedWorkspaces;
     private final LongGauge cycleEnvExcludedWorkspaces;
     private final LongHistogram workspaceDuration;
     private final LongCounter rulesSplit;
     private final LongCounter newRulesCreated;
+    private final LongCounter rulesMovedToDefault;
     private final LongCounter rulesSkipped;
 
     @Inject
     public AutomationRuleProjectMigrationService(
             @NonNull TransactionTemplate transactionTemplate,
             @NonNull ProjectService projectService,
-            @NonNull WorkspacesService workspacesService,
-            @NonNull CacheManager cacheManager,
+            @NonNull AutomationRuleEvaluatorService evaluatorService,
             @NonNull IdGenerator idGenerator,
             @NonNull @Config("automationRuleProjectMigration") AutomationRuleProjectMigrationConfig config,
             @NonNull @Config("migration") MigrationConfig migrationConfig) {
         this.transactionTemplate = transactionTemplate;
         this.projectService = projectService;
-        this.workspacesService = workspacesService;
-        this.cacheManager = cacheManager;
+        this.evaluatorService = evaluatorService;
         this.idGenerator = idGenerator;
         this.config = config;
         this.migrationConfig = migrationConfig;
@@ -94,11 +82,6 @@ public class AutomationRuleProjectMigrationService {
         this.cycleEligibleWorkspaces = meter
                 .histogramBuilder("%s.cycle.eligible_workspaces".formatted(METRIC_NAMESPACE))
                 .setDescription("Number of workspaces with multi-project automation rules found per cycle")
-                .ofLongs()
-                .build();
-        this.cycleTrappedWorkspaces = meter
-                .gaugeBuilder("%s.cycle.trapped_workspaces".formatted(METRIC_NAMESPACE))
-                .setDescription("Number of workspaces trapped by automation rule migration")
                 .ofLongs()
                 .build();
         this.cycleEnvExcludedWorkspaces = meter
@@ -120,6 +103,10 @@ public class AutomationRuleProjectMigrationService {
                 .counterBuilder("%s.new_rules.created".formatted(METRIC_NAMESPACE))
                 .setDescription("Number of new rule rows inserted during split")
                 .build();
+        this.rulesMovedToDefault = meter
+                .counterBuilder("%s.rules.moved_to_default".formatted(METRIC_NAMESPACE))
+                .setDescription("Number of rules moved to Default Project (all original projects deleted)")
+                .build();
         this.rulesSkipped = meter
                 .counterBuilder("%s.project_associations.skipped".formatted(METRIC_NAMESPACE))
                 .setDescription("Number of project associations skipped during migration, tagged by reason")
@@ -127,26 +114,14 @@ public class AutomationRuleProjectMigrationService {
     }
 
     public void runMigrationCycle() {
-        var skippedWorkspaceIds = workspacesService.findAutomationRuleMigrationSkippedWorkspaceIds();
-        cycleTrappedWorkspaces.set(skippedWorkspaceIds.size());
-        cycleEnvExcludedWorkspaces.set(migrationConfig.getExcludedWorkspaceIds().size());
+        var excludedWorkspaceIds = buildExcludedWorkspaceIds();
 
-        var excludedWorkspaceIds = Stream.concat(
-                migrationConfig.getExcludedWorkspaceIds().stream(),
-                skippedWorkspaceIds.stream())
-                .collect(Collectors.toUnmodifiableSet());
+        log.info("Starting automation rule project migration cycle, workspacesPerRun='{}', "
+                + "maxRulesPerCycle='{}', envExcludedWorkspaces='{}'",
+                config.workspacesPerRun(), config.maxRulesPerCycle(),
+                migrationConfig.getExcludedWorkspaceIds().size());
 
-        log.info("Starting automation rule project migration cycle, workspacesPerRun='{}', trappedWorkspaces='{}'",
-                config.workspacesPerRun(), skippedWorkspaceIds.size());
-
-        var placeholderIfEmpty = excludedWorkspaceIds.isEmpty()
-                ? Set.of("__placeholder_never_matches__")
-                : excludedWorkspaceIds;
-
-        var eligibleWorkspaces = transactionTemplate.inTransaction(READ_ONLY,
-                handle -> handle.attach(AutomationRuleMigrationDAO.class)
-                        .findEligibleWorkspaces(placeholderIfEmpty, DemoData.AUTOMATION_RULES,
-                                config.workspacesPerRun()));
+        var eligibleWorkspaces = findEligibleWorkspaces(excludedWorkspaceIds);
 
         cycleEligibleWorkspaces.record(eligibleWorkspaces.size());
 
@@ -157,48 +132,74 @@ public class AutomationRuleProjectMigrationService {
 
         log.info("Found workspaces with multi-project automation rules, count='{}'", eligibleWorkspaces.size());
 
+        int totalSplit = 0;
+        int totalNewRules = 0;
+
         for (var workspace : eligibleWorkspaces) {
             var startMillis = System.currentTimeMillis();
             try {
-                migrateWorkspace(workspace.workspaceId(), workspace.multiProjectRuleCount(), startMillis);
+                var result = migrateWorkspace(workspace.workspaceId(), workspace.multiProjectRuleCount());
+                totalSplit += result.splitCount();
+                totalNewRules += result.newRuleCount();
+                recordWorkspaceDuration(RESULT_MIGRATED, startMillis);
             } catch (Exception e) {
                 log.error("Workspace automation rule migration failed, will retry next cycle, workspaceId='{}'",
                         workspace.workspaceId(), e);
                 recordWorkspaceDuration(RESULT_ERROR, startMillis);
             }
         }
+
+        log.info("Automation rule project migration cycle completed, workspacesProcessed='{}', "
+                + "totalRulesSplit='{}', totalNewRules='{}'",
+                eligibleWorkspaces.size(), totalSplit, totalNewRules);
     }
 
-    private void migrateWorkspace(String workspaceId, long multiProjectRuleCount, long workspaceStartMillis) {
+    private Set<String> buildExcludedWorkspaceIds() {
+        var envExcluded = migrationConfig.getExcludedWorkspaceIds();
+        cycleEnvExcludedWorkspaces.set(envExcluded.size());
+        return Set.copyOf(envExcluded);
+    }
+
+    private List<AutomationRuleMigrationDAO.EligibleWorkspace> findEligibleWorkspaces(
+            Set<String> excludedWorkspaceIds) {
+        return transactionTemplate.inTransaction(READ_ONLY,
+                handle -> handle.attach(AutomationRuleMigrationDAO.class)
+                        .findEligibleWorkspaces(excludedWorkspaceIds, DemoData.AUTOMATION_RULES,
+                                config.workspacesPerRun()));
+    }
+
+    private WorkspaceMigrationResult migrateWorkspace(String workspaceId, long multiProjectRuleCount) {
         log.info("Starting workspace automation rule migration, workspaceId='{}', multiProjectRuleCount='{}'",
                 workspaceId, multiProjectRuleCount);
 
-        var multiProjectRuleIds = transactionTemplate.inTransaction(READ_ONLY,
-                handle -> handle.attach(AutomationRuleMigrationDAO.class)
-                        .findMultiProjectRuleIds(workspaceId, DemoData.AUTOMATION_RULES));
+        var multiProjectRuleIds = findMultiProjectRuleIds(workspaceId);
 
         if (CollectionUtils.isEmpty(multiProjectRuleIds)) {
             log.info("No multi-project automation rules to migrate, workspaceId='{}'", workspaceId);
-            recordWorkspaceDuration(RESULT_NO_MULTI_PROJECT_RULES, workspaceStartMillis);
-            return;
+            return WorkspaceMigrationResult.EMPTY;
+        }
+
+        var rulesToProcess = multiProjectRuleIds.size() > config.maxRulesPerCycle()
+                ? multiProjectRuleIds.subList(0, config.maxRulesPerCycle())
+                : multiProjectRuleIds;
+
+        if (rulesToProcess.size() < multiProjectRuleIds.size()) {
+            log.info("Capping rules to process, workspaceId='{}', total='{}', processing='{}'",
+                    workspaceId, multiProjectRuleIds.size(), rulesToProcess.size());
         }
 
         int splitCount = 0;
         int newRuleCount = 0;
-        int allDeletedCount = 0;
+        int movedToDefaultCount = 0;
 
-        for (var ruleId : multiProjectRuleIds) {
+        for (var ruleId : rulesToProcess) {
             var result = splitRule(workspaceId, ruleId);
             switch (result.outcome()) {
-                case SPLIT -> {
+                case SPLIT, PARTIAL_DELETED -> {
                     splitCount++;
                     newRuleCount += result.newRulesCreated();
                 }
-                case ALL_PROJECTS_DELETED -> allDeletedCount++;
-                case PARTIAL_DELETED -> {
-                    splitCount++;
-                    newRuleCount += result.newRulesCreated();
-                }
+                case MOVED_TO_DEFAULT -> movedToDefaultCount++;
                 case NO_OP -> log.debug("Rule already single-project (race), ruleId='{}', workspaceId='{}'",
                         ruleId, workspaceId);
             }
@@ -206,30 +207,31 @@ public class AutomationRuleProjectMigrationService {
 
         rulesSplit.add(splitCount);
         newRulesCreated.add(newRuleCount);
+        rulesMovedToDefault.add(movedToDefaultCount);
 
-        if (splitCount == 0 && allDeletedCount == multiProjectRuleIds.size()) {
-            log.info("All multi-project rules have deleted projects, trapping workspace, workspaceId='{}'",
-                    workspaceId);
-            workspacesService.markAutomationRuleMigrationSkipped(workspaceId, TRAPPED_REASON_ALL_PROJECTS_DELETED);
-            recordWorkspaceDuration(RESULT_ALL_SKIPPED, workspaceStartMillis);
-            return;
-        }
-
-        evictAutomationRuleCache(workspaceId);
+        evaluatorService.evictCache(workspaceId);
 
         log.info(
-                "Workspace automation rule migration completed, workspaceId='{}', rulesSplit='{}', newRules='{}', allDeleted='{}'",
-                workspaceId, splitCount, newRuleCount, allDeletedCount);
-        recordWorkspaceDuration(RESULT_MIGRATED, workspaceStartMillis);
+                "Workspace automation rule migration completed, workspaceId='{}', rulesSplit='{}', newRules='{}', movedToDefault='{}'",
+                workspaceId, splitCount, newRuleCount, movedToDefaultCount);
+        return WorkspaceMigrationResult.builder()
+                .splitCount(splitCount)
+                .newRuleCount(newRuleCount)
+                .movedToDefaultCount(movedToDefaultCount)
+                .build();
+    }
+
+    private List<UUID> findMultiProjectRuleIds(String workspaceId) {
+        return transactionTemplate.inTransaction(READ_ONLY,
+                handle -> handle.attach(AutomationRuleMigrationDAO.class)
+                        .findMultiProjectRuleIds(workspaceId, DemoData.AUTOMATION_RULES));
     }
 
     private SplitResult splitRule(String workspaceId, UUID ruleId) {
-        var junctionProjectIds = transactionTemplate.inTransaction(READ_ONLY,
-                handle -> handle.attach(AutomationRuleProjectsDAO.class)
-                        .findProjectIdsByRuleId(ruleId, workspaceId));
+        var junctionProjectIds = findJunctionProjectIds(ruleId, workspaceId);
 
         if (junctionProjectIds.size() <= 1) {
-            return new SplitResult(SplitOutcome.NO_OP, 0);
+            return SplitResult.builder().outcome(SplitOutcome.NO_OP).build();
         }
 
         var existingProjects = projectService.findByIds(workspaceId, junctionProjectIds);
@@ -238,63 +240,78 @@ public class AutomationRuleProjectMigrationService {
                 .collect(Collectors.toUnmodifiableSet());
 
         var deletedCount = junctionProjectIds.size() - validProjectIds.size();
+
+        if (validProjectIds.isEmpty()) {
+            return moveRuleToDefaultProject(workspaceId, ruleId, deletedCount);
+        }
+
         if (deletedCount > 0) {
             log.info("Rule has partially deleted projects, ruleId='{}', workspaceId='{}', valid='{}', deleted='{}'",
                     ruleId, workspaceId, validProjectIds.size(), deletedCount);
             rulesSkipped.add(deletedCount, SKIP_REASON_PARTIAL_DELETED);
         }
 
-        if (validProjectIds.isEmpty()) {
-            log.info("All projects deleted for rule, ruleId='{}', workspaceId='{}'", ruleId, workspaceId);
-            rulesSkipped.add(1, SKIP_REASON_ALL_DELETED);
-            return new SplitResult(SplitOutcome.ALL_PROJECTS_DELETED, 0);
-        }
-
-        var sortedProjectIds = new ArrayList<>(new TreeSet<>(validProjectIds));
+        var sortedProjectIds = validProjectIds.stream().sorted().toList();
 
         return transactionTemplate.inTransaction(WRITE, handle -> {
-            var dao = handle.attach(AutomationRuleMigrationDAO.class);
+            var migrationDao = handle.attach(AutomationRuleMigrationDAO.class);
+            var ruleDao = handle.attach(AutomationRuleDAO.class);
 
-            dao.deleteJunctionByRuleId(ruleId, workspaceId);
+            migrationDao.deleteJunctionByRuleId(ruleId, workspaceId);
 
-            var firstProjectId = sortedProjectIds.get(0);
-            dao.insertJunction(ruleId, firstProjectId, workspaceId);
-            dao.clearLegacyProjectId(ruleId, workspaceId);
+            var firstProjectId = sortedProjectIds.getFirst();
+            migrationDao.insertJunction(ruleId, firstProjectId, workspaceId);
+            ruleDao.clearLegacyProjectId(ruleId, workspaceId);
 
             int newRules = 0;
             for (int i = 1; i < sortedProjectIds.size(); i++) {
                 var newRuleId = idGenerator.generateId();
                 var projectId = sortedProjectIds.get(i);
 
-                dao.copyBaseRule(newRuleId, ruleId, workspaceId);
-                dao.copyEvaluator(newRuleId, ruleId);
-                dao.insertJunction(newRuleId, projectId, workspaceId);
-                dao.clearLegacyProjectId(newRuleId, workspaceId);
+                migrationDao.copyBaseRule(newRuleId, ruleId, workspaceId);
+                migrationDao.copyEvaluator(newRuleId, ruleId);
+                migrationDao.insertJunction(newRuleId, projectId, workspaceId);
+                ruleDao.clearLegacyProjectId(newRuleId, workspaceId);
                 newRules++;
             }
 
-            log.debug("Split rule, ruleId='{}', workspaceId='{}', keptProject='{}', newRules='{}'",
+            log.info("Split rule, ruleId='{}', workspaceId='{}', keptProject='{}', newRules='{}'",
                     ruleId, workspaceId, firstProjectId, newRules);
 
-            return new SplitResult(
-                    deletedCount > 0 ? SplitOutcome.PARTIAL_DELETED : SplitOutcome.SPLIT,
-                    newRules);
+            return SplitResult.builder()
+                    .outcome(deletedCount > 0 ? SplitOutcome.PARTIAL_DELETED : SplitOutcome.SPLIT)
+                    .newRulesCreated(newRules)
+                    .build();
         });
     }
 
-    private void evictAutomationRuleCache(String workspaceId) {
-        try {
-            var key = CACHE_KEY_PATTERN.formatted(workspaceId);
-            cacheManager.evictAsync(key, true)
-                    .whenComplete((result, error) -> {
-                        if (error != null) {
-                            log.warn("Async cache eviction failed, workspaceId='{}'", workspaceId, error);
-                        }
-                    });
-            log.debug("Evicted automation rule cache for workspace, workspaceId='{}'", workspaceId);
-        } catch (Exception e) {
-            log.warn("Failed to evict automation rule cache, workspaceId='{}'", workspaceId, e);
-        }
+    private SplitResult moveRuleToDefaultProject(String workspaceId, UUID ruleId, int deletedCount) {
+        var defaultProject = projectService.getOrCreate(workspaceId, ProjectService.DEFAULT_PROJECT, SYSTEM_USER);
+
+        transactionTemplate.inTransaction(WRITE, handle -> {
+            var migrationDao = handle.attach(AutomationRuleMigrationDAO.class);
+            var ruleDao = handle.attach(AutomationRuleDAO.class);
+
+            migrationDao.deleteJunctionByRuleId(ruleId, workspaceId);
+            migrationDao.insertJunction(ruleId, defaultProject.id(), workspaceId);
+            migrationDao.disableRule(ruleId, workspaceId);
+            ruleDao.clearLegacyProjectId(ruleId, workspaceId);
+
+            return null;
+        });
+
+        rulesMovedToDefault.add(1, MOVED_TO_DEFAULT_ATTR);
+        log.info("All projects deleted for rule, moved to Default Project (disabled), "
+                + "ruleId='{}', workspaceId='{}', deletedCount='{}', defaultProjectId='{}'",
+                ruleId, workspaceId, deletedCount, defaultProject.id());
+
+        return SplitResult.builder().outcome(SplitOutcome.MOVED_TO_DEFAULT).build();
+    }
+
+    private Set<UUID> findJunctionProjectIds(UUID ruleId, String workspaceId) {
+        return transactionTemplate.inTransaction(READ_ONLY,
+                handle -> handle.attach(AutomationRuleProjectsDAO.class)
+                        .findProjectIdsByRuleId(ruleId, workspaceId));
     }
 
     private void recordWorkspaceDuration(Attributes resultAttributes, long startMillis) {
@@ -304,10 +321,16 @@ public class AutomationRuleProjectMigrationService {
     private enum SplitOutcome {
         SPLIT,
         PARTIAL_DELETED,
-        ALL_PROJECTS_DELETED,
+        MOVED_TO_DEFAULT,
         NO_OP
     }
 
+    @Builder
     private record SplitResult(SplitOutcome outcome, int newRulesCreated) {
+    }
+
+    @Builder
+    private record WorkspaceMigrationResult(int splitCount, int newRuleCount, int movedToDefaultCount) {
+        static final WorkspaceMigrationResult EMPTY = WorkspaceMigrationResult.builder().build();
     }
 }
